--- a/templates/search.html
+++ b/templates/search.html
@@ -15,7 +15,7 @@ Home
         <input type="submit" name="submit" class="btn btn-info btn-md" value="Search">
     </div>
 </form>
-{% for elem in why %}
+{% for elem in results %}
 {% for inside in elem %}
 <div>{{inside.best_book.title.cdata}}</div>
 <div>By: {{inside.best_book.author.name.cdata}}</div>
